test/sema/pointer-to-pointer-auto-dereference.cx
// RUN: %not %cx -typecheck %s -Wno-unused | %FileCheck %s

extern void f(int* i);

void a(int* p) {
    var q = p;
    // CHECK: [[@LINE+1]]:7: error: invalid argument #1 type 'int**' to 'f', expected 'int*'
    f(&q);
    // CHECK: [[@LINE+1]]:7: error: invalid argument #1 type 'int**' to 'f', expected 'int*'
    f(&p);
}
